--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -55,7 +55,109 @@
 
     <div class="section-2">
         <h2>Conoce nuestra variedad de productos</h2>
-        <div class="autoplay">
+        <owl-carousel-o [options]="customOptions">
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                        <h3>Aceitunas</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>  
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
+                        <h3>Frutas</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
+                        <h3>Cacao</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
+                        <h3>Granos</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
+                        <h3>Verduras</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                        <h3>Aceitunas</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>  
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/frutas.jpg')">
+                        <h3>Frutas</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/cacao.jpg')">
+                        <h3>Cacao</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/granos.jpg')">
+                        <h3>Granos</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+            <ng-template carouselSlide>
+                <a href="https://www.google.com" class="seccion-prod">
+                    <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/verduras.jpg')">
+                        <h3>Verduras</h3>
+                        <div class="sec-2-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                </a>
+            </ng-template>
+        </owl-carousel-o>
+        <!-- <div class="autoplay">
             <a href="https://www.google.com" class="seccion-prod">
                 <div class="seccion-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                     <h3>Aceitunas</h3>
@@ -136,7 +238,7 @@
                     </div>
                 </div>
             </a>
-        </div>
+        </div> -->
     </div>
 
     <div class="section-3">
