Header and footer responsive

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -246,8 +246,8 @@
             <h2>Nuevos productos</h2>
             <a href="" class="btn btn-ver-catalogo">VER CATÁLOGO</a>
         </div>
-        <!-- <div class="row">
-            <div class="col">
+        <div class="row">
+            <div class="col-custom">
                 <a href="https://www.google.com" class="seccion-3-prod">
                     <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                         <div class="sec-3-oculto d-flex justify-content-center">
@@ -258,7 +258,7 @@
                     <p>S/20.00</p>
                 </a>
             </div>
-            <div class="col">
+            <div class="col-custom">
                 <a href="https://www.google.com" class="seccion-3-prod">
                     <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                         <div class="sec-3-oculto d-flex justify-content-center">
@@ -269,7 +269,7 @@
                     <p>S/18.90</p>
                 </a>
             </div>
-            <div class="col">
+            <div class="col-custom">
                 <a href="https://www.google.com" class="seccion-3-prod">
                     <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                         <div class="sec-3-oculto d-flex justify-content-center">
@@ -280,7 +280,7 @@
                     <p>S/32.00</p>
                 </a>
             </div>
-            <div class="col">
+            <div class="col-custom">
                 <a href="https://www.google.com" class="seccion-3-prod">
                     <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                         <div class="sec-3-oculto d-flex justify-content-center">
@@ -291,7 +291,7 @@
                     <p>S/9.90</p>
                 </a>
             </div>
-            <div class="col">
+            <div class="col-custom">
                 <a href="https://www.google.com" class="seccion-3-prod">
                     <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                         <div class="sec-3-oculto d-flex justify-content-center">
@@ -302,9 +302,63 @@
                     <p>S/12.50</p>
                 </a>
             </div>
-            
-        </div> -->
-        <div class="autoplay-2">
+            <div class="col-custom">
+                <a href="https://www.google.com" class="seccion-3-prod">
+                    <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                        <div class="sec-3-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                    <h4>Cúrcuma en polvo</h4>
+                    <p>S/20.00</p>
+                </a>
+            </div>
+            <div class="col-custom">
+                <a href="https://www.google.com" class="seccion-3-prod">
+                    <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                        <div class="sec-3-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                    <h4>Jengibre en polvo</h4>
+                    <p>S/18.90</p>
+                </a>
+            </div>
+            <div class="col-custom">
+                <a href="https://www.google.com" class="seccion-3-prod">
+                    <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                        <div class="sec-3-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                    <h4>Palta en cubos conge...</h4>
+                    <p>S/32.00</p>
+                </a>
+            </div>
+            <div class="col-custom">
+                <a href="https://www.google.com" class="seccion-3-prod">
+                    <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                        <div class="sec-3-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                    <h4>Papa amarilla entera...</h4>
+                    <p>S/9.90</p>
+                </a>
+            </div>
+            <div class="col-custom">
+                <a href="https://www.google.com" class="seccion-3-prod">
+                    <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
+                        <div class="sec-3-oculto d-flex justify-content-center">
+                            <p>VER PRODUCTO</p>
+                        </div>
+                    </div>
+                    <h4>Banano entero</h4>
+                    <p>S/12.50</p>
+                </a>
+            </div>
+        </div>
+        <!-- <div class="autoplay-2">
             <a href="https://www.google.com" class="seccion-3-prod">
                 <div class="seccion-3-prod-cont d-flex flex-column justify-content-end align-items-end" style="background-image: url('assets/img/inicio/aceitunas.jpg')">
                     <div class="sec-3-oculto d-flex justify-content-center">
@@ -350,7 +404,7 @@
                 <h4>Banano entero</h4>
                 <p>S/12.50</p>
             </a>
-        </div>
+        </div> -->
 
     </div>
 
