--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -34,7 +34,7 @@
             <div class="footer-div-2 d-flex">
                 <div class="footer-sub-3 d-flex flex-column">
                     <h3 class="footer-titulo">Métodos de Pago</h3>
-                    <div>
+                    <div class="div-img-metodos">
                         <img class="img-fluid me-3" src="assets/img/inicio/visa.png" alt="">
                         <img class="img-fluid me-3" src="assets/img/inicio/mastercard.png" alt="">
                         <img class="img-fluid" src="assets/img/inicio/diners.png" alt="">
