--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -10,31 +10,31 @@
                 
                 <a class="nav-link" routerLink="/views/home" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Inicio</a>
 
-                <a class="nav-link" routerLink="/nosotros" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Conócenos</a>
+                <a class="nav-link" routerLink="/views/nosotros" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Conócenos</a>
 
-                <a class="nav-link" routerLink="/catalogo" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Catálogo</a>
+                <a class="nav-link" routerLink="/views/catalogo" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Catálogo</a>
 
-                <a class="nav-link" routerLink="/agronindustrial" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Agroindustrial</a>
+                <a class="nav-link" routerLink="/views/agroindustrial" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Agroindustrial</a>
 
-                <a class="nav-link" routerLink="/novedades" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Novedades</a>
+                <a class="nav-link" routerLink="/views/novedades" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Novedades</a>
                 
-                <a class="nav-link" routerLink="/asdas" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Ubícanos</a>
+                <a class="nav-link" routerLink="/views/ubicanos" routerLinkActive="nav-link-activo" [routerLinkActiveOptions]="{exact: true}">Ubícanos</a>
 
                 <!-- <div class="contenedor-rs-header">
                     <a class="header-fb d-inline-block me-3" href="#" target="_blank"><img class="header-img-fb" src="assets/img/inicio/facebook-header.png"><img class="img-fb-hover" src="assets/img/inicio/facebook-hover.png"></a>
                     <a class="header-inst d-inline-block" href="#" target="_blank"><img class="header-img-inst" src="assets/img/inicio/instagram-header.png"><img class="img-inst-hover" src="assets/img/inicio/instagram-hover.png"></a>
                 </div> -->
             </ul>
-            <!-- <button class="btn btn-light btn-abrir-menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
-                <i class="bi bi-list" style="font-size: 1.7rem; color: #ad17ba;"></i>
-            </button> -->
+            <button class="btn btn-light btn-abrir-menu" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">
+                <i class="bi bi-list"></i>
+            </button>
         </div>
         <div class="header-3 d-flex align-items-center">
             <div class="d-flex align-items-center">
                 <button class="btn">
-                    <img class="img-fluid" src="assets/img/inicio/user-icon.png" alt="">
+                    <img class="img-fluid img-usuario" src="assets/img/inicio/user-icon.png" alt="">
                 </button>
-                <div>
+                <div class="div-mensajes-usuario">
                     <p class="mensaje-header">Hola</p>
                     <p class="mensaje-header">Inicia sesión</p>
                 </div>
@@ -42,7 +42,7 @@
             <div class="header-linea"></div>
             <div class="div-notificacion">
                 <button class="btn">
-                    <img src="assets/img/inicio/shop-icon.png" alt="">
+                    <img class="img-fluid img-carrito" src="assets/img/inicio/shop-icon.png" alt="">
                     <div class="num-notificacion">20</div>
                 </button>
             </div>
