--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -119,6 +119,19 @@
 	display: flex !important;
 	visibility: visible !important;
 }
+:host ::ng-deep .section-2 .owl-next, :host ::ng-deep .section-2 .owl-prev{
+	background: transparent !important;
+	position: absolute !important;
+	top: 50% !important;
+} 
+:host ::ng-deep .section-2 .owl-prev{
+	left: -19px;
+	transform: translate(-50%, -50%);
+}
+:host ::ng-deep .section-2 .owl-next{
+	right: -57px;
+	transform: translate(-50%, -50%);
+}
 // .section-2 .slick-prev,
 // .section-2 .slick-next
 // {
@@ -189,7 +202,7 @@
 .seccion-3-prod{
 	display: block;
 	text-decoration: none;
-	/* margin-bottom: 40px; */
+	margin-bottom: 40px;
 	/* min-width: 170px; */
 	/* width: 100%; */
 	margin-left: 10px;
@@ -315,4 +328,29 @@
 	text-align: justify;
 	font-size: 1.1rem;
 	line-height: 1.1rem;
+}
+
+
+@media (min-width: 576px) {
+    .col-custom{
+        width: 50%;
+    }
+}
+
+@media (min-width: 768px) {
+    .col-custom{
+        width: 33.3%;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-custom{
+        width: 25%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-custom{
+        width: 20%;
+    }
 }
